@@ -21,25 +21,25 @@ EBUILD jnr-ffi-0.7.7.ebuild 1580 SHA256 0fcc5c2ec8d688bb2f4748950e3a1bd4bb037d3b
 EBUILD jnr-ffi-0.7.9.ebuild 1580 SHA256 bf5cdfed3383fa9c008e0317be9a8f3278b314fa16e9d9ae786e9ecad29e42ed SHA512 f671f992842419dc8349ffb9a98ab443cd4cf93a87e5d69175a00be7d42faa7f6e79373d8f13ccd2ed52e4e1760b6de1dfd1fef03a9c9fa8a255c278a74db95a WHIRLPOOL 9406931780b528f935779df2823b357ea1e274f3e2cd9aea1c3ddc8352c304d7389f843fb76c2316dbea5dfcca09ac3a32cb08bb002df768423f0386bf6ce7c0
 EBUILD jnr-ffi-1.0.10.ebuild 1502 SHA256 e86c8af0127cba7cb0606a2228e60174c8e0ff45ea15c271dc56002d573a8966 SHA512 b1aa6003dc94464185e194db7e1e1b25b52eb5402ee4b131cf62b493cb762c0ffee6d16bc818c4de1a9d5afcaf5bd3380f954ef2a5504425757d16e74d72db4c WHIRLPOOL af9b8fb43ad70774088bcbf32e469983cb72119e3b90350bfe2f62a412778955e1d6399f101b86b67ff7888a58761f6ab7fc3e5a30395315bc418001811d4eac
 EBUILD jnr-ffi-1.0.6.ebuild 1620 SHA256 1a5889cbfb1f8880bb90ad54a92f268d14c8328cb41381b1b9f75aa872024b49 SHA512 fe88c695710ddad271c13c5c14c39cd3f5983daa6612ed935eb745f4e4f8d3cbe632179343743408080d501ef2d69ae374bbfede29c8ece2bcf3e7af502a0ed2 WHIRLPOOL 3a4d05b909bcf8d51b47d724ef8b92176e05acf9461c491d3fda2f11a7956ce1c3f3487635dadbe552f23b301ba6ed5cdac4615d46c3af4c896eab2cbee7b05c
-EBUILD jnr-ffi-2.0.2.ebuild 1609 SHA256 f7145e5fce7861b5d58fc121f7a9173ce4ddebee5952b2511dae3070130c6de9 SHA512 df388410a2d5d880e705b649a31527d0b5249656f79c0a3dbb86b5e160c64ad71bc4c37d7016dba854127e0ec537a58886449e96ba21b820e22c21bca8dc40b8 WHIRLPOOL 405e34e480e05217bc1d0f7e837a37e8e1ab7d73212f2e5369b5cabb0f1133136ec36db1fca931758ec9c4d4993810bfb7fadbab701b3f299fa6a2d28e6dce06
-MISC ChangeLog 3181 SHA256 750394500341c7c4d1ac3addb00a3426d93763a30c1e6f3f4e03efe3cca42262 SHA512 f488e8eede777bf18d56448a219656b67eb08712a1a3d0025cb4d2ad6cb381bff14854902940bccd457c57a91cdf55120ee9cef3aef9b803550bab3782816f51 WHIRLPOOL 9b27c97f95f077fc91e6fdd96dff4a8109f0c99fa2546b344fdb42a750cf048a36119632dbaff2d4dcb0210cbb7bcec6815c3020bd8b7f21bdc9f5a67595b903
+EBUILD jnr-ffi-2.0.2.ebuild 1494 SHA256 524f6cfc88398340fa1d241d0c0e6e70eb6cd5ab9c8a24d03ffcd0299598db4b SHA512 85f1b5cd6a2ad6aa73205c6340b36ce420021ce30cb153041f02917bcd9b8a530cc8add22bcb8cb59c39c1ec2f21a3dc445fb579f662cb081631737e3daa5f61 WHIRLPOOL 85a94a105165db141504226a23f4dafe4a422b49c01a58cd3676d7a4e5417a504a7780c6958d8de5137c94d1da6fbc06787dbfbf4605bf70ac3fcee1d1649ab8
+MISC ChangeLog 3394 SHA256 87e4aa5a7b9485883efa652cf4cbb3b965932ab30f026cec7259380b79fd9af2 SHA512 bda0089428bc1216167d5793614510bcbfa7e5fdf13a73c4316fa0b430308fd9a0963b85658e9b0598e4b203c7de009c98c8299655368662dc3c35fe29746051 WHIRLPOOL c2104bd1c18af545607cfe44d1cadcc5ca6b066cab74281ce544ce458486eb31478aef59473bee951dab5429c69518b8d210535702fe0b1a38378ac7bca9a1e1
 MISC metadata.xml 205 SHA256 e319f1701f6be29c8e077049d77738b69b72be0458754ef90ad9a684f2ec1722 SHA512 fb7831a8a05e9995888eaef748c98a12adcb911ef1c9901a3555765782d87cd3172cfb2c47ffa89d8a5454e7aa1f5bd27358b88a035c97f1ff388d7fc85a9d7e WHIRLPOOL 673d7b564054942d04b33cfcd01f7c5ff16ad9f9f2a60586ccc54c60443bf2dc34fa037e4e1de889539838342eea62022a3b9a7cae65b0c2f34fcbacfcfd0c73
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVHb8HXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVHcSgXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1MjhERTZCRDg2OTFBNDM5MUZEQTJFRDQy
-MUM2MzIxMjlDNkQ3REU0AAoJECHGMhKcbX3kstsP/RYgnA6yME0h4kne0p3QCEOs
-2hu5cSkZ5ViDQ6Fo0rQNL6rtnVobXukQwsWdh9eNTd5aCiR16JvrC9FyLjWKsyXe
-8LIlFlg9TN7UUujfe09oZjeW37Op6YdIxwDoxlQSNO8hyuB8dX5q2jIPUoOwaAg7
-orZ5E4K2DpKkxc4x+AMBuKjFSWnds27VEgXN1QhyH9ofo/UKURPyerzy2SYBBYk/
-Ksb9HAG8i/a7Ms6e0lHckFOrXUzKLEt52WmZEghz0RJcH4/D3YKgZqDuLPaDkxPW
-AMTNALpVJzaM9qR62xNGN03e9mAJSH6wliGnlaxruQZY5ODwuK7o8T6nJEbFHJ+l
-YNV9h+MOGIoW5cAjd0kmYiezWWq2nGfDTrIrN7arvg9cnzU5hVrsUIzrjRTR/upV
-WJ0lGB1mP+7X+I8xK45ZVa8XCMgpNeVw0Ch2ghTh/tZNCTxsiBP+n7V2wWhmxDRA
-4ajtwcMHpYnc8E/p58vb3gmHBkV6TuAAEz/fGNj+aBZkZLTn8ye17r+uKuI1hTj5
-L54WFJMWrqhungePDyQBI7qB94HNCVmsTfjU9Twb5F1sN5eZ93nepMc6f3+ItEFx
-joCNCQ5wB8ZKSkYb9sxgercWW2ROTmO6Qv1x4iruObh359paShLIJIWWhl049vTE
-7kDPfNe2V0+0Ur8Gh01/
-=N9tb
+MUM2MzIxMjlDNkQ3REU0AAoJECHGMhKcbX3ktk8QAItTZEuM4MhEMMY+FiEdMB6k
+eGRYB1ZD7Ter3rIOtmdC07xk8aeYAYodMAiGwfUUbEAOvP7z96xNbkx1Pig9piti
+Y574p3wQdefqDohftzhDBCNoNjKmxPlgyfOuJDj9ZYHdL+YNYdSFr3ccDisUfvKu
+wrCALsyPTbxKc7IILmW7G64onTmR5F/7DCnrdz3KT5f5ftZb2MfQCElcfWqL+q+h
+fbXY1maggE95wOGYGQBhGF7g8dDYRd+qaF0xmj7H3mxSCShifjTpAyAXgw7jv7Bf
+4sRqKRk/5N9Wu5hmnfxRCEzuOJ1pjz9bgASpd0UY27+SkT/gTPsehNWWx2PiWlY2
+MHSCb4UZNX3UxstNj6iBPHZxOY7yQm1E9iVvlStCamNjg+UXiydruTuPdDqCwa3o
+434eMsy0J/ykR6IOb/gGzWSi/uo7oSNlfQX1GwbaplC6uFX+3kfY6h83Y4dNlBL6
+guK8W1NFtTN9ZOw5rNjRtTT8SfIhJwDIPQ6V50gbW4/GfZYbT8dp4IMSd5MmUwRr
+9TsByarq+Sh2Q6seO62zJo8vxVIVTsIRskL+55wUWbiZaaDOWnnJZrjeWFixTtf0
+MA7lWGKuhPGDKBM0h8SYLObFWIRRZhXW0xam5bZGXxPshtrFFqerhLjuPJTlwRnE
+zcDSeVvgNRPEzD55t7qe
+=WcUR
 -----END PGP SIGNATURE-----
