@@ -12,17 +12,25 @@ EBUILD jnr-netdb-1.0.6.ebuild 1258 SHA256 a2d29adefe990cb4973e8579452e7adc4c975d
 EBUILD jnr-netdb-1.1.1.ebuild 1258 SHA256 46bfc0daba9f36ccb72510a9debceb9e7cca8a597c6c274ad4ec256a351cb1db SHA512 e8bfcf41e7d1cb61a46b15964ae10c3f600497b5fe5c2385fd5c2868f3073ef739e424268c3ab2ba89cc29d89b8e892165ccf34a2a3ad96e5622bccce4e5774d WHIRLPOOL 2a2a500c167f2b9e9df19099d1491782d7788ef420a7b1c73f6dbe6a35954a0c8c42e8576486014200249d30077f5329e3f1d2dfd15b4d3eb127e66bd75056d2
 EBUILD jnr-netdb-1.1.2-r1.ebuild 1256 SHA256 6e9e732a029adc78d4d2d59d5b4d6120b8dc9fd768c97dd8a4b91d38cdf6be2c SHA512 48ea24455a30a2e29b22250a40e4a769676f848d00454fb94ff5015bbfe763d880b38b5deac4c4bc9163486a53ca81af70d2e712580ad9f7b5baf6241ecc5946 WHIRLPOOL af1c9020d771c8500743cb2a992e6c9f3d8ce60622c749dff9aa80cdd23190d6537ff9e4165774ecd02e7b0d9d6ebcf955d9bef56f20e28ba5e7fc794cb5bf3d
 EBUILD jnr-netdb-1.1.2.ebuild 1254 SHA256 5b64645834dbfbbf0358e1fe6ca0363ba7e1a43e9a4c80b350920249f1449e5e SHA512 fe696425ab13798be9006207ef2073de591b5a7378a4086437ef31a659a1caaf519cbdb6efece7a990021939234613f14e3dad3e5d3b88a05870d9ae6fbbfdaa WHIRLPOOL 610585091da32c2a2116a9e511472fc35780305abae6e2774b0eac9dd38e99f193393bf8afcdd3ad30bc235969d2c5bbdfe76daaed4d2af1d08230ee2915c505
-EBUILD jnr-netdb-1.1.4.ebuild 1290 SHA256 f5a5f1f43cc878a147fb0d05777074bef7ef32155fc0becd5aad623b266c4df6 SHA512 5bfa3cc84528b443c74c3f6515fa7a80e9881732b229c750a8986b8315d8f1b3168898a9d833fb5930e8de1f0230bf0deb212f017fe30c5d22b42f625f786c61 WHIRLPOOL fd71ffc9af08303d3665d39417a2ddfb8f71dabd26c0a9b4b02e11bc5a499da96951bc36a62c954ede3a7760d94dd5de9243e4f76a02cb764ad324ef3a5f2159
-MISC ChangeLog 2500 SHA256 47cfac3e74caef09ff6165609e1df6ebe0f81dc9bc884752a9fb9a9d014cbec4 SHA512 d180a9713888be82816d0d67df9f11486ab3e67f0bd93c1886411ee4a55e901040e6db98d76a69612b5f92806449dc817b5853d76c7b734f8f2990f9331271f6 WHIRLPOOL 17004ff3082b961ad18a78a4784fef1070b1de0d6b6d0fb2e64d1ca84794a02183174132adf8a372a84b862b2cf2e159389592f8b3a25079602d51ffcd471069
+EBUILD jnr-netdb-1.1.4.ebuild 1243 SHA256 c51ab6883436367484b2361ce0c07d847e9a71095cdac21fc82a9cef550e7613 SHA512 f5d5fe7142a06ec55f5287b05d45da260024ca41f525dc76616e0234c5d6a1cf27c8f1335c0f88cfd1df4acd52cdf5e9a3808ef0d3d3bf79fbf2f68a6405361a WHIRLPOOL 3666607eed4a6843a5ff1588016e99c42825e38e71d255ca6d15efd52bd930b25d5448aaa126c0d0b0b304b9be3aafed9a5dbc34ad322099145413df8cf02890
+MISC ChangeLog 2616 SHA256 b9990ed0f80c2d1aaede38c9fa1332868d08397bef2c980531d26dff783d282e SHA512 d6c4bd1310e59005aa9caf7f9e6c31ab591609a242a122fa93110453a31f6cf7a7dd0bbfa534f2688424d85ebfab2f61444687d10c61aae8b7a034e0ec868147 WHIRLPOOL c4790d7b703b6d4af72084099c6658bc38956ee4770cef02da1a7498c0ea3967128819ced0427aecebcc6515aef59470e19f30ade61cac734663748a1aaa6c88
 MISC metadata.xml 506 SHA256 33f9202e1ab6449bb23a12c6e571f0b08257b660b2208d1dc6fcc372c52da27d SHA512 efaa3d3d530d6bc3e350ed98f5f32fd1ed2421d46705cb851fe81ef929d9af1fec3e762dff4eae18c1fc5b456e9ede384c88380344eba0b682f3ab2bb4c46caf WHIRLPOOL 18e20ebad20cbda4c5778585e73940f92729ffc1ade7545afd57af999645601a15a78093bd64fd2b2ce64a685cdad0a9bffbf2b68b6515d07ddb00a54b60877e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQEcBAEBCAAGBQJVDeTGAAoJEJGRpfGTSRu4gKkH/3iDZZ+FV3bmvgCoIojHxr9R
-isdO2vrGa1eGJ8ndAmysKHw2yBL9rmg6LVnmCd4ruJLW6FvDEn9rh2zTd6t15Chq
-PrSCOisiIKP91Mn1GoV0LapX18CBFE1MJqXYXGyaAEavYTC7VqLAIqzNgUPKjQrR
-VgsP7x90ZZmj8Jd89u6fI+cnWeHAUq/TO+G24AooKBqhYOPCRQsMekfVKU1CY94y
-CPMjAAaAVtS1QO7OAfc1IDnvPk9rqzUjciLLwT8cxrf+dQU7fMKUZUyhxtS7+W0g
-KBF1M0ctwuNT6SUZSIgkcOWKk/qv0SFWd5OaF2acHRywXpK0ig0EWpdEp++fsyw=
-=LE+J
+iQJ8BAEBCABmBQJVHcj9XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1MjhERTZCRDg2OTFBNDM5MUZEQTJFRDQy
+MUM2MzIxMjlDNkQ3REU0AAoJECHGMhKcbX3kAacP/0xLbeaynkpLLazQsjPSOaiq
+NvaRdE9N3zhMbC4amZGPgzPg2stuwVhGCoc2J371FmLUZyTj6E+OSM2G3TBjWQJ+
+sGZYqvctBbDzXp2v+IStlxkek1Y/rbWBm/6m/ArGv3ukP3Uw6VnzakcnJTf2efUb
+zD6TDRcXDqan5K6jz+ipvd97HqL4Ei6wSCfW8VaEUhAo1c7FMJcciKhpO1ki1bW9
+BEjqsV2zJ4Az14OlwN2hDdiZV9+0QStyAqa57UKG4dbc3Ec6UN14AR5dNE+gZNH4
+yD8xnVrdKNsAMOZy9C8tREFOTq/x4Sex4QFc4+awGHyr/fagLOftVByBF8DPqS3N
+BYynBsMY7qkbTp/tsnrC5Pbu0RloWPWosVM+TItWYeui3d01JW0Y+cyWaopPKC4i
+p622ixH6az6tkhYL+jjFpD4hPFxtWUK5CJJ2LpJQOXpFUCJnp1Mkrvb6KDhyoWlc
+PShkxeFBrTAMldzMgRkFb4MICV8Xh5O0q90f50Y/IHzXvVQhkzcincrGrGCg34k3
+Vl8jOmYIPt6hP5hlnYtXsigCqXT57BaYzkeeUzuTIRKh2fA7eAKepxxjygRgYoNK
+2O1HJF/eLahC+PJ6WGowMtHt3jO/PpYUVjLI02NsozD7UoOiakp3a2NjcAc0R78J
+e4emFbqQpA+0bjAjLAVZ
+=nzgp
 -----END PGP SIGNATURE-----
