@@ -10,4 +10,4 @@ RDEPEND=dev-java/jffi:1.2 dev-java/jnr-x86asm:1.0 dev-java/asm:4 >=virtual/jre-1
 SLOT=2
 SRC_URI=https://github.com/jnr/jnr-ffi/archive/2.0.2.tar.gz -> jnr-ffi-2.0.2.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-ant-2	1091461b8b02f54fabcfbf159164ff15	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=5f2965ec32761cbd3a1d18d4aa3aa857
+_md5_=e514a44329e75d182c05fa8261d43136
