@@ -1,4 +1,4 @@
-DEFINED_PHASES=compile configure install preinst prepare setup
+DEFINED_PHASES=compile configure install preinst prepare setup test
 DEPEND=dev-java/jnr-ffi:2 >=virtual/jdk-1.5 test? ( dev-java/ant-junit dev-java/junit:4 ) >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip ) >=dev-java/ant-core-1.8.2 >=dev-java/javatoolkit-0.3.0-r2
 DESCRIPTION=Network services database access for java
 EAPI=5
@@ -10,4 +10,4 @@ RDEPEND=dev-java/jnr-ffi:2 >=virtual/jre-1.5 >=dev-java/java-config-2.1.9-r1 sou
 SLOT=1.0
 SRC_URI=https://github.com/jnr/jnr-netdb/archive/1.1.4.tar.gz -> jnr-netdb-1.1.4.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-ant-2	1091461b8b02f54fabcfbf159164ff15	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=71947a1719816583740f5ff8094f05c3
+_md5_=d2de79e7c1b8a787c52493dc51bdd34e
