@@ -1,0 +1,12 @@
+DEFINED_PHASES=install
+DESCRIPTION=Client for NoMachine remote servers
+EAPI=5
+HOMEPAGE=http://www.nomachine.com
+KEYWORDS=-* ~amd64 ~x86
+LICENSE=nomachine
+RDEPEND=dev-libs/glib:2 dev-libs/openssl:0
+RESTRICT=strip
+SLOT=0
+SRC_URI=amd64? ( http://download.nomachine.com/download/4.5/Linux/nomachine-enterprise-client_4.5.0_1_x86_64.tar.gz ) x86? ( http://download.nomachine.com/download/4.5/Linux/nomachine-enterprise-client_4.5.0_1_i686.tar.gz )
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=ce0a0e5281257dc816569ac2d0eb104b
