@@ -3,25 +3,28 @@ Hash: SHA256
 
 DIST nomachine-enterprise-client_4.4.12_11_i686.tar.gz 57206 SHA256 9f76b2740734b1bac56c399bbad19dc8c248a75f66a17c3115d378786f525cd9 SHA512 1e63c6236d183295ff83e95d5219a2003878e93caca569d2ad4339f5033640dd36282239341bce20a91314cd972f80ab1076cee006ad685dc66c0ec98a593595 WHIRLPOOL 7d0de2a8bc1e936e5f72e3a7678ad599ca004a236dfe1cf6624dc6c6c33feb94b57544cab29c12e234cea61df39c38c5e7591e9b6547590b52873b4654155de1
 DIST nomachine-enterprise-client_4.4.12_11_x86_64.tar.gz 26356658 SHA256 30a6cc3f8139d58db9f2cca6baaecbfcbfb845d62dfa76804ff244cdff818bd2 SHA512 ead00f1e5f7df52e780ede876f606cda8fbbb80b0177e377a2b7530248c8a7988af9b3d44242e8f720525feef000dd62201a5f896d8b9504d7febf2bcba0402b WHIRLPOOL 6eadce1dff2fc146feab0cd2732cd025e900ff7eb9be65e11a49e24954c74da80d147f12609c16caaa7f0979604fe159af2704bec9144d50c95be1f1f327473b
+DIST nomachine-enterprise-client_4.5.0_1_i686.tar.gz 25476432 SHA256 72e551af4254af2287205463ff0525b562af0e714221681f260f676e8eb1160a SHA512 45011622f6767284a42951120e9ca5de462e9773d06c0ac0aeec88ac69c2588e2810ccfea73a4f53fa02ee28cd96562b0945323aed70975dc1d72c18d2f1f9ce WHIRLPOOL 867c2d0db473035bcba04143eed6d64164c28afcd89e4e729181216b90f3e1286ff75207dd82c2e16d420c8999e1858cc799f03def31cced3534e364e177af34
+DIST nomachine-enterprise-client_4.5.0_1_x86_64.tar.gz 26344131 SHA256 d5d3ea7d45f223cde63db377b6c7a9c69d1b070e4ed5e6572199554eb6a235a4 SHA512 ec30000b0d0acb9d6bcde083732222a25e4ce500af22afdc2fb43d22cf2bbd6ced352e9e943a12a74c7a09fc5922774bd8ef03d67c0368afeefa2692d6126607 WHIRLPOOL d0eb3b6c32ed4e38a3f15db7e7c1fe3b10541f5e2c62d080538e6ee403eff0fecb4096abb5c96f3174b275b1830f681f336f3a378aafb5bb6543590715a01496
 EBUILD nxplayer-4.4.12.11.ebuild 1194 SHA256 68085ff7d0b9759a6fcf777021dbc4320c4c0bba75a38872dfaccb4047704915 SHA512 27e708758457105a490c40180ea63ff2b5c5273fb9091d4903ba30d789005639a5b676966d90d0dbd93813a636f05f893b25797d3be809612775517cd0d77be0 WHIRLPOOL ca23a3cf7fa91b348cbd0d66b76afe2c3fa48a59f7224583bee4473040e8c28c15da73d0788aa1742491c46298f939f1c77da0f589583bef11c5f701389c70ba
-MISC ChangeLog 404 SHA256 e564142479afce8bc086bfcc3548e3b1427ddd355b84d0780cefdfb8a418e379 SHA512 c731ede8bc22b96360ec1684ea18c3d3f56749efac49ad7a78a9a342a892202a9467c2c5055ac80a3efb49baafb59d99d19100f7418578b6606c121aafe0e122 WHIRLPOOL acc361235a01b394afed2a55c8268fb643c10b5e88f8abeb00fa9cdbb7b961ed210f9b27579eff8d58f989d538b5aabeb5cbb5ec74e80afa7bf6777ddb1b953c
+EBUILD nxplayer-4.5.0.1.ebuild 1192 SHA256 3aa39a7ed950597eac748a243259d97ddb77d23802a4b75b3d7b0f45a97438e1 SHA512 e5cac4421d6403e8c326f581d8a232d11691c0e38e39139c7d634ee07a949eb5fafa7fbc35e76339358e74cbc5a2cc999ff691123ffe89c496b1dd8120c753c6 WHIRLPOOL 9ad2754cd782d4bbbf66de112f5d4d0c53b25887c6b3e6579618e2dcaae9126ad63f7bd5c602f3a1931fabda4bff110e5d6a1fdc488cbf82a39bf46cac95b653
+MISC ChangeLog 536 SHA256 e0248ddcc886ab7b0b0d7dc61fa9e5c07e1a3846e3c28e4cb5f57e5defee7f0f SHA512 bb4d1f99b61b6111772efc15d228ca2f811e4b802da4b260bdb3d87d072761341a189f70a7d6f7dd2d7e8cdbc3f658ff770751bacf1df786bc6a22c2ce43d612 WHIRLPOOL 48e7097b7eb391162663c7e2193624bdc444057df7f6152b0afc61dd9d17f5d9f3f7c2e2ee17e125912a7a84e9ceb0476b2940b45dfbfca1fb93f78c8f347af0
 MISC metadata.xml 655 SHA256 f8d4b88622e686307abad0eeacc71d9538d87d3a8b27f66e6572cbce628627ed SHA512 d24804fcef4f91d8e1e9d727b6b6e53e7a1e8bc82bb971e8966c187d70259eb805fcc9a4c344020a0156ca5cfe9cc4542eed87719a59bf4de05a690107087248 WHIRLPOOL 46b0919edc2cb8c847453c2f77a7c62e1ebd92095952207d4b7fb0e77e341a084b0a79850c505c28f4f8342ee80e0897c1deacf3ebe107a748532899de5d209b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVFBe+XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVHcfgXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXREMzFDRDFGNEQwRTAyNjc2QzRDNjRFQzAw
-MEY3QUIzMzFCMEYwOTdGAAoJEAD3qzMbDwl/2TwQAMAFHJcw91PUNdGEwo/aaMyt
-4+cJ77tcysTeeuUEte7YRTltCsrF/mxL6HgMtjkX1iNVQEN3/cm/rCNPaXpqF3ja
-HsZWo37KWFCICcYpQW+OFXYhdiu0EZsMKy8CgBXVxvJSAkS9QXjoKqSuWfyEXDzu
-RQLcf2jS+1/shSL6Bt1rKGbUy0PmmUbZQZMIqHBndwxgllvBs86KgztpNgGDijB8
-PcszzKfHwRTkFLhm9ePI2vQjRSOpW3SYyRs2RaXg1IueAaY5h9BbHQZi7vG3ygYu
-hVGHFGauvbsyM23RauNYfNcnknwqNj/eyGS/UbmiPjM+GmanpwIXK3bvN08PM05g
-QvE1wQeneU/VXw4E/YbZ9IsKN1DMRpomxsSDOxeskNzs843pCc05Sr1KA9A6UBNw
-6wcb5quSIVwm+6iX0QK8WaJsyjrh2lNMRYtpTqE9sMW8KDFvVRFVZIzVym50L8Km
-zXM4an5KnCQ30ANl2QsObNCd6Bv7m95jxYc6xWyapw2ft5tNrtk4wKnBTO3yovKY
-Bt+wtI3lO3XeRw4LPmjdFlkIunyv770kWNkedIq+dlSdKjh+GNAVssH9QtwdZoW3
-1DHq/T/5BC/O3kskw63UFR6wJB+dj7EWphpqbHEqZOQinfBeUykdn0kh1VbmTX7R
-WghNuzusqC9q/m9cXsUr
-=KtUu
+MEY3QUIzMzFCMEYwOTdGAAoJEAD3qzMbDwl/0U4QANzxW+LxICstc4i+kVSMT3Tl
+Qm4nlbcFhknOgs+I5ae9sS2Azkhw+rMg4rohDC7blAWPyFjaYI47emisYiZsLAjd
+5wW5Dt8tMQg5cB++PO2p1lu88clVUt9RhYBgY78HirWshcQRIHoWvqI+wCiQiuuu
+6qD2NmqPmw/15LLhFqEnXDSptQXNJ9SRk+vqDpEikO0PMVxcTgTScYpAH7QrFM0R
+9Asz3p/nJm9K2Gd/2U8Zjgpoo1SH/VXCo3dX/dwJcvappkoPMvERvWUph7iBaQoF
+yLjnPQ3IOsvfx7tZ/Ii2QT2w6XMo5l1SOtoRjNd61m6DVrLPPs+asDINdXuoESLJ
+/OL1TEnX33qGhpRwY2C5enHN9ElM4IhyS4Bbo5oSGSWm+FwHE0av/Vd3Qu8Opw/d
+D/t/s1WZzth9HY6kz7Fj5iAEkPHROdemggPHOPgA1JH1VJJmGNTPnoqb6ro5MQWC
+lgng/+44OAyByWtl6uZFURunz+MvGRWjoKa1pKjZWbXzZ8EBldfzcq5wID9u6Zc/
+FlH3dD7OYuFA9BwmRdiPka8fNbxlsEUcyaDcklp4fdxYlWnhYWpwHsZ1WLeatyQn
+1hi43bDHZo1KvddrRQAjL7AH0Wp5zJsozl7vHI/ldbstG/iZgJ7pJWR+4ktWchbB
+w4mvQXIF3nm8dVouCAX6
+=bOQk
 -----END PGP SIGNATURE-----
