@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jnr-netdb
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jnr-netdb/ChangeLog,v 1.15 2015/03/21 21:38:09 monsieurp Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jnr-netdb/ChangeLog,v 1.16 2015/04/02 22:55:40 chewi Exp $
+
+  02 Apr 2015; James Le Cuirot <chewi@gentoo.org> jnr-netdb-1.1.4.ebuild:
+  Fix the classpath and re-enable the tests.
 
 *jnr-netdb-1.1.4 (21 Mar 2015)
 
