@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/nxplayer
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nxplayer/ChangeLog,v 1.1 2015/03/26 14:29:15 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nxplayer/ChangeLog,v 1.2 2015/04/02 22:51:07 voyageur Exp $
+
+*nxplayer-4.5.0.1 (02 Apr 2015)
+
+  02 Apr 2015; Bernard Cafarelli <voyageur@gentoo.org>
+  +nxplayer-4.5.0.1.ebuild:
+  Version bump
 
 *nxplayer-4.4.12.11 (26 Mar 2015)
 
