@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jnr-ffi
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jnr-ffi/ChangeLog,v 1.17 2015/04/02 22:13:15 chewi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jnr-ffi/ChangeLog,v 1.18 2015/04/02 22:37:02 chewi Exp $
+
+  02 Apr 2015; James Le Cuirot <chewi@gentoo.org> jnr-ffi-2.0.2.ebuild:
+  The line to remove the broken test was supposed to be removed but wasn't amid
+  the earlier confusion. Upstream appears to have fixed it.
 
   02 Apr 2015; James Le Cuirot <chewi@gentoo.org> jnr-ffi-1.0.10.ebuild,
   jnr-ffi-2.0.2.ebuild:
